--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -722,16 +722,17 @@ nav .container {
   font-size: 12px;
 }
 .copy-text-box {
-  position: absolute;
-  bottom: 0px;
-  left: 0px; 
-  width: 100%;
+  position: relative;
+  height:100%;
+  min-height:450px;
+  top:-415px;
   padding: 5px 0px;
   color: rgba(255, 255, 255, 0.5);
 }
 .copy-text-bottom {
   left: 24px;
-  position: relative;
+  bottom:5px;
+  position: absolute;
 }
 .text-panel {
   background: #474747;
